# tracerec

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: python-publish.yml
tests/: __init__.py  test_flow.py  triples_dataset.py
tracerec/algorithms/: embedder.py
tracerec/algorithms/collaborative_filtering/: __init__.py
tracerec/algorithms/graph_based/: graph_embedder.py  transe.py
tracerec/algorithms/knowledge_based/: __init__.py  transe.py
tracerec/algorithms/sequential_based/: sasrec.py  sequential_embedder.py
tracerec/data/datasets/: path_dataset.py  triples_dataset.py
tracerec/data/paths/: path_manager.py
tracerec/data/triples/: triples_manager.py
tracerec/metrics/: map.py
tracerec/training/: __init__.py
tracerec/utils/: collates.py
tracerec/validation/: __init__.py
